Finish project 3-1 writeup

--- a/proj2/index.html
+++ b/proj2/index.html
@@ -222,6 +222,16 @@
     </tr>
   </table>
 </div>
+<div align="middle">
+  <table style="width=100%">
+    <tr>
+      <td>
+        <img src="images/5e.png" align="middle" width="400px"/>
+        <figcaption align="middle">Edge split and flip combined</figcaption>
+      </td>
+    </tr>
+  </table>
+</div>
 
 <h3 align="middle">Part 6: Loop Subdivision for Mesh Upsampling</h3>
 
