--- a/proj4/index.html
+++ b/proj4/index.html
@@ -32,7 +32,7 @@
 <div>
     
     <h2 align="middle">Overview</h2>
-    <p> In this assignment, I applied different textures on objects as a continuation to Project 3-1. In part 1, we have mirror and glass materials, where this could be implemented using reflection and refraction techniques. In part 2, we broaden our microfacet BRDF texture by obtaining actual material’s refractive indices at RGB wavelengths with a different importance sampling implementation. </p>
+    <p> In this assignment, we learn how to create some simulations on a cloth. First, we need to set up the cloth structure by having the point masses connected by springs with structural, shearing, and bending constraints. Next, we will apply external force and correct force to create some movements on the cloth. Then we will have the cloth collide with a sphere and plane object. Later on, we will have the cloth collapse on itself. Finally, we apply various methods of texture mapping on the cloth. </p>
     <br>
     
     <h2 align="middle">Part 1: Masses and springs</h2>
